--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,11 @@
         "magento/module-shipping": "100.3.*||100.4.*"
     },
     "type": "magento2-module",
-    "version": "1.0.2",
-    "license": "Apache-2.0",
+    "version": "1.0.3",
+    "license": [
+        "LGPL-2.1-only",
+        "GPL-3.0-or-later"
+    ],
     "autoload": {
         "files": [
             "registration.php"
