--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Custom Carrier Trackers Extension for Magento 2",
     "keywords": ["Magento 2", "Carrier Tracker", "Custom Tracker", "Track Shipment", "Order Shipment"],
     "require": {
-        "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0||~8.1.0",
+        "php": "~7.4.0||~8.1.0",
         "magento/framework": "102.0.*||103.0.*",
         "magento/module-backend": "101.0.*||102.0.*",
         "magento/module-config": "101.1.*||101.2.*",
@@ -11,7 +11,7 @@
         "magento/module-shipping": "100.3.*||100.4.*"
     },
     "type": "magento2-module",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "license": [
         "LGPL-2.1-only",
         "GPL-3.0-or-later"
